tests/baselines/reference/pathsValidation1.errors.txt
tests/cases/compiler/tsconfig.json(5,18): error TS5063: Substitutions for pattern '*' should be an array.


==== tests/cases/compiler/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "*": "*"
                     ~~~
!!! error TS5063: Substitutions for pattern '*' should be an array.
            }
        }
    }
==== tests/cases/compiler/a.ts (0 errors) ====
    let x = 1;